[package]
name = "messaging"
version = "1.0.5"
edition = "2021"
repository = "https://github.com/GTLugo/ookami/tree/master/crates/messaging"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A simple two-way messaging crate"
authors = ["Gabriel Lugo <dev.gabriel.lugo@gmail.com>"]
keywords = ["messages", "messaging", "synchronization", "sync"]
categories = ["data-structures"]

# Enable a small amount of optimization in debug mode
[profile.dev.package."messaging"]
opt-level = 1

# Enable high optimizations for dependencies
[profile.dev.package."*"]
opt-level = 3

[dependencies]
thiserror = "1.0.44"
